@@ -1,9 +1,11 @@
 package com.flytrap.rssreader.service;
 
+import com.flytrap.rssreader.domain.folder.Folder;
 import com.flytrap.rssreader.domain.subscribe.Subscribe;
 import com.flytrap.rssreader.infrastructure.entity.folder.FolderSubscribeEntity;
 import com.flytrap.rssreader.infrastructure.repository.FolderSubscribeEntityJpaRepository;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -25,10 +27,30 @@ public class FolderSubscribeService {
         folderSubscribeRepository.deleteBySubscribeIdAndFolderId(subscribeId, folderId);
     }
 
+    @Transactional(readOnly = true)
     public List<Long> getFolderSubscribeId(Long folderId) {
         return folderSubscribeRepository.findAllByFolderId(folderId)
                 .stream()
                 .map(FolderSubscribeEntity::getId)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public Map<Folder, List<Long>> getFolderSubscribeIds(List<Folder> folders) {
+        List<Long> folderIds = folders.stream()
+                .map(Folder::getId)
+                .toList();
+
+        List<FolderSubscribeEntity> folderSubscribes =
+                folderSubscribeRepository.findAllByFolderIdIn(folderIds);
+
+        Map<Long, List<Long>> folderSubscribeIds = folderSubscribes.stream()
+                .collect(Collectors.groupingBy(FolderSubscribeEntity::getFolderId,
+                        Collectors.mapping(FolderSubscribeEntity::getSubscribeId,
+                                Collectors.toList())));
+
+        return folders.stream()
+                .collect(Collectors.toMap(folder -> folder,
+                        folder -> folderSubscribeIds.get(folder.getId())));
     }
 }
